--- a/Front/src/components/Home/MainWindowMessage.css
+++ b/Front/src/components/Home/MainWindowMessage.css
@@ -22,3 +22,17 @@
     color: #f5f4f2df;
     text-align: center;
 }
+
+.try-btn {
+    background-color: #f5f4f2df;
+    color: #4e18f2;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+  }
+  
+  .try-btn:hover {
+    background-color: #b1b1b1;
+  }
