--- a/Front/src/pages/Weight_statistic/WeightStatistics.css
+++ b/Front/src/pages/Weight_statistic/WeightStatistics.css
@@ -17,7 +17,7 @@
 html,
 body {
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -550,7 +550,7 @@ body {
   background-color: white;
   border-radius: 12px;
   width: 90%;
-  max-width: 800px;
+  max-width: 500px;
   max-height: 90vh;
   display: flex;
   flex-direction: column;
